[project]
name = "smai-backend"
version = "0.1.0"
description = "Scalable FastAPI backend service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_subclassing_any = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
